--- a/covid/templates/index.html
+++ b/covid/templates/index.html
@@ -9,7 +9,30 @@
   <body>
     {% block content %}
     <div class="container">
-      <h1 class="text-center">Casos de {{ doenca }} no Brasil</h1>
+      <h1 class="text-center">Casos de Covid-19 no Brasil</h1>
+      <p class="text-center">
+        Dados por estado da federação, atualizados em {{ date }}
+      </p>
+      <!-- Tabela criada já com as classes Bootstrap -->
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Estado</th>
+            <th scope="col">Número de casos</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Laço for agora iterando sobre cada estado do JSON -->
+          {% for state in states %}
+          <tr scope="row">
+            <!-- Os dados do laço -->
+            <td>{{ state["name"] }}</td>
+            <td>{{ state["qtd_confirmation"] }}</td>
+          </tr>
+          <!-- No template nós devemos sinalizar o fim do for com um endfor -->
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
     {% endblock %}
   </body>
