--- a/covid/app/templates/index.html
+++ b/covid/app/templates/index.html
@@ -12,7 +12,29 @@
     <title>Covid-19</title>
   </head>
   <body>
-    {% block content %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white mb-4">
+      <div class="container">
+        <a href="#" class="navbar-brand">Covid-19</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbar-content"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-content">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="{{ url_for('brazil') }}" class="nav-link">Brasil</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('world') }}" class="nav-link">Mundo</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <h1 class="text-center">Casos de Covid-19 no Brasil</h1>
       <p class="text-center">
@@ -39,7 +61,6 @@
         </tbody>
       </table>
     </div>
-    {% endblock %}
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
