--- a/covid/app/templates/base.html
+++ b/covid/app/templates/base.html
@@ -9,12 +9,24 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{{ url_for('static', filename='img/favicon.ico') }}"
+    />
     <title>Covid-19</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white mb-4">
       <div class="container">
-        <a href="{{ url_for('index') }}" class="navbar-brand">Covid-19</a>
+        <a href="{{ url_for('index') }}" class="navbar-brand">
+          <img
+            src="{{ url_for('static', filename='img/favicon-32x32.png') }}"
+            alt="Imagem de um vírus"
+          />
+          Covid-19</a
+        >
         <button
           class="navbar-toggler"
           type="button"
